--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>KeyRush - Accueil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="style.css" />
     <style>
       .home-page {
@@ -331,7 +332,7 @@
         border-color: #3b15fa;
       }
       .manual-input-group input.error {
-        border-color: #ef4444;
+        border-color: #3b15fa;
       }
       .error-message {
         color: #3b15fa;
